// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Jobs /> should render properly with jobs 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<h2
    className="emotion-0"
  >
    Job Queue
  </h2>,
  .emotion-0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-3,
.emotion-3:hover,
.emotion-3:visited,
.emotion-3 .noop {
  background-color: #3A5DFF;
}

.emotion-3:hover,
.emotion-3 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-3[aria-disabled=true],
.emotion-3 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  padding-left: 4px;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-9 {
  height: auto;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  white-space: nowrap;
}

.emotion-9 tr {
  background-color: #252525;
}

.emotion-9 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-9 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-9 tr:hover .actions {
  color: #b3b3b3;
}

.emotion-9 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-9 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-9 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-9 td {
  max-width: calc(100vw / 7);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-9 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-9 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-10 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: auto;
}

.emotion-10:nth-of-type(2) {
  width: 100%;
}

.emotion-10:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: transparent;
  border: none;
  font-size: inherit;
  font-weight: inherit;
  color: inherit;
  cursor: pointer;
  width: 100%;
  padding: 12px 16px;
}

.emotion-11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-11:hover svg {
  color: #ffffff;
  -webkit-transform: rotate(-180deg);
  -moz-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-12 {
  color: transparent;
}

.emotion-21 {
  color: #6088FE;
}

.emotion-23 {
  padding: 12px 16px;
}

.emotion-28 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: 1px;
}

.emotion-28:nth-of-type(2) {
  width: 100%;
}

.emotion-28:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 12px 16px;
}

.emotion-30 {
  cursor: pointer;
}

.emotion-31 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #ebb52e;
  background-color: #191919;
  font-family: Roboto Condensed;
}

.emotion-32:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-33 {
  text-align: center;
}

.emotion-35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-width: 32px;
  height: 32px;
  padding: 6px;
  margin: -6px;
  border-radius: 32px;
  color: #c92300;
}

.emotion-36:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  background-color: #191919;
}

.emotion-37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 16px;
  width: 212px;
  position: relative;
}

.emotion-38 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-39 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #c92300;
}

.emotion-39:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-39:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-40 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #009f22;
}

.emotion-40:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-40:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-41 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #ebb52e;
}

.emotion-41:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-41:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-42 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #0074f5;
}

.emotion-42:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-42:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-43 {
  position: relative;
  height: 100%;
}

.emotion-44 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 6px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #191919;
  background-color: transparent;
  margin: -6px;
}

.emotion-44:hover,
.emotion-44.focus-visible:focus {
  color: #ffffff!important;
}

.emotion-46 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #b3b3b3;
  background-color: #191919;
  font-family: Roboto Condensed;
}

.emotion-57 {
  height: 100%;
  -webkit-flex: 14 0 auto;
  -ms-flex: 14 0 auto;
  flex: 14 0 auto;
  background-color: #0074f5;
}

.emotion-57:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-57:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-61 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #009f22;
  background-color: #191919;
  font-family: Roboto Condensed;
}

.emotion-70 {
  height: 100%;
  -webkit-flex: 8 0 auto;
  -ms-flex: 8 0 auto;
  flex: 8 0 auto;
  background-color: #009f22;
}

.emotion-70:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-70:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-71 {
  height: 100%;
  -webkit-flex: 4 0 auto;
  -ms-flex: 4 0 auto;
  flex: 4 0 auto;
  background-color: #0074f5;
}

.emotion-71:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-71:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-73 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #4a4a4a;
  background-color: #191919;
  font-family: Roboto Condensed;
}

.emotion-83 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #c92300;
  background-color: #191919;
  font-family: Roboto Condensed;
}

.emotion-95 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #191919;
  background-color: #ebb52e;
  font-family: Roboto Condensed;
}

.emotion-113 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #009f22;
}

.emotion-113:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-113:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <h3
        className="emotion-2"
      >
        Number of 
        Jobs
        : 
        11
      </h3>
      <button
        className="emotion-3"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-4"
        >
          <svg
            className="emotion-5"
            color="#ffffff"
            data-file-name="refresh.svg"
            height={20}
          />
          <div
            className="emotion-6"
          >
            Refresh 
            Jobs
          </div>
        </div>
      </button>
    </div>
    <div
      className="emotion-7"
    >
      <div
        className="emotion-8"
      >
        <table
          className="emotion-9"
        >
          <thead>
            <tr>
              <th
                className="emotion-10"
              >
                <a
                  className="emotion-11"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  Status
                  <svg
                    className="emotion-12"
                    data-file-name="sort.svg"
                    height={18}
                  />
                </a>
              </th>
              <th
                className="emotion-10"
              >
                <a
                  className="emotion-11"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  Job Name
                  <svg
                    className="emotion-12"
                    data-file-name="sort.svg"
                    height={18}
                  />
                </a>
              </th>
              <th
                className="emotion-10"
              >
                <a
                  className="emotion-11"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  Priority
                  <svg
                    className="emotion-12"
                    data-file-name="sort.svg"
                    height={18}
                  />
                </a>
              </th>
              <th
                className="emotion-10"
              >
                <a
                  className="emotion-11"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  Created
                  <svg
                    className="emotion-21"
                    data-file-name="sort.svg"
                    height={18}
                  />
                </a>
              </th>
              <th
                className="emotion-10"
              >
                <div
                  className="emotion-23"
                >
                  # Assets
                </div>
              </th>
              <th
                className="emotion-10"
              >
                <div
                  className="emotion-23"
                >
                  Errors
                </div>
              </th>
              <th
                className="emotion-10"
              >
                <div
                  className="emotion-23"
                >
                  Task Progress
                </div>
              </th>
              <th
                className="emotion-28"
              >
                <div
                  className="emotion-29"
                >
                  <svg
                    data-file-name="kebab.svg"
                    height={20}
                  />
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="emotion-30"
              onClick={[Function]}
            >
              <td>
                <div
                  className="emotion-31"
                >
                  In Progress
                </div>
              </td>
              <td>
                <a
                  className="emotion-32"
                  href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  test-whitespace.json
                </a>
              </td>
              <td
                className="emotion-33"
              >
                100
              </td>
              <td>
                2019-11-07 01:38:36
              </td>
              <td
                className="emotion-33"
              >
                4
              </td>
              <td>
                <div
                  className="emotion-35"
                >
                  <a
                    className="emotion-36"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956/errors"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    <svg
                      color="#c92300"
                      data-file-name="warning.svg"
                      height={20}
                    />
                  </a>
                </div>
              </td>
              <td
                style={
                  Object {
                    "minWidth": 244,
                    "overflow": "visible",
                  }
                }
              >
                <div
                  aria-label="Progress Bar"
                  className="emotion-37"
                  onKeyPress={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="emotion-38"
                  >
                    <div
                      className="emotion-39"
                    />
                    <div
                      className="emotion-40"
                    />
                    <div
                      className="emotion-41"
                    />
                    <div
                      className="emotion-42"
                    />
                  </div>
                </div>
              </td>
              <td>
                <div
                  className="emotion-43"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="actions emotion-44"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
            <tr
              className="emotion-30"
              onClick={[Function]}
            >
              <td>
                <div
                  className="emotion-46"
                >
                  Cancelled
                </div>
              </td>
              <td>
                <a
                  className="emotion-32"
                  href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000955"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  test-whitespace.json
                </a>
              </td>
              <td
                className="emotion-33"
              >
                100
              </td>
              <td>
                2019-11-07 01:38:36
              </td>
              <td
                className="emotion-33"
              >
                4
              </td>
              <td>
                <div
                  className="emotion-35"
                >
                  <a
                    className="emotion-36"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000955/errors"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    <svg
                      color="#c92300"
                      data-file-name="warning.svg"
                      height={20}
                    />
                  </a>
                </div>
              </td>
              <td
                style={
                  Object {
                    "minWidth": 244,
                    "overflow": "visible",
                  }
                }
              >
                <div
                  aria-label="Progress Bar"
                  className="emotion-37"
                  onKeyPress={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="emotion-38"
                  >
                    <div
                      className="emotion-39"
                    />
                    <div
                      className="emotion-40"
                    />
                    <div
                      className="emotion-41"
                    />
                    <div
                      className="emotion-57"
                    />
                  </div>
                </div>
              </td>
              <td>
                <div
                  className="emotion-43"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="actions emotion-44"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
            <tr
              className="emotion-30"
              onClick={[Function]}
            >
              <td>
                <div
                  className="emotion-61"
                >
                  Success
                </div>
              </td>
              <td>
                <a
                  className="emotion-32"
                  href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308a-67c2-1433-8fef-0a580a000955"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  test-whitespace.json
                </a>
              </td>
              <td
                className="emotion-33"
              >
                100
              </td>
              <td>
                2019-11-07 01:36:29
              </td>
              <td
                className="emotion-33"
              >
                4
              </td>
              <td>
                <div
                  className="emotion-35"
                >
                  <a
                    className="emotion-36"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308a-67c2-1433-8fef-0a580a000955/errors"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    <svg
                      color="#c92300"
                      data-file-name="warning.svg"
                      height={20}
                    />
                  </a>
                </div>
              </td>
              <td
                style={
                  Object {
                    "minWidth": 244,
                    "overflow": "visible",
                  }
                }
              >
                <div
                  aria-label="Progress Bar"
                  className="emotion-37"
                  onKeyPress={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="emotion-38"
                  >
                    <div
                      className="emotion-39"
                    />
                    <div
                      className="emotion-70"
                    />
                    <div
                      className="emotion-71"
                    />
                  </div>
                </div>
              </td>
              <td />
            </tr>
            <tr
              className="emotion-30"
              onClick={[Function]}
            >
              <td>
                <div
                  className="emotion-73"
                >
                  Archived
                </div>
              </td>
              <td>
                <a
                  className="emotion-32"
                  href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d53089-67c2-1433-8fef-0a580a000955"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  test-whitespace.json
                </a>
              </td>
              <td
                className="emotion-33"
              >
                100
              </td>
              <td>
                2019-11-07 01:35:36
              </td>
              <td
                className="emotion-33"
              >
                4
              </td>
              <td>
                <div
                  className="emotion-35"
                >
                  <a
                    className="emotion-36"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d53089-67c2-1433-8fef-0a580a000955/errors"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    <svg
                      color="#c92300"
                      data-file-name="warning.svg"
                      height={20}
                    />
                  </a>
                </div>
              </td>
              <td
                style={
                  Object {
                    "minWidth": 244,
                    "overflow": "visible",
                  }
                }
              >
                <div
                  aria-label="Progress Bar"
                  className="emotion-37"
                  onKeyPress={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="emotion-38"
                  >
                    <div
                      className="emotion-39"
                    />
                  </div>
                </div>
              </td>
              <td />
            </tr>
            <tr
              className="emotion-30"
              onClick={[Function]}
            >
              <td>
                <div
                  className="emotion-83"
                >
                  Failure
                </div>
              </td>
              <td>
                <a
                  className="emotion-32"
                  href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c0975970-62ef-1f81-83f8-0a580a000954"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  test_officer
                </a>
              </td>
              <td
                className="emotion-33"
              >
                100
              </td>
              <td>
                2019-10-11 21:11:03
              </td>
              <td
                className="emotion-33"
              >
                4
              </td>
              <td>
                <div
                  className="emotion-35"
                >
                  <a
                    className="emotion-36"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c0975970-62ef-1f81-83f8-0a580a000954/errors"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    <svg
                      color="#c92300"
                      data-file-name="warning.svg"
                      height={20}
                    />
                  </a>
                </div>
              </td>
              <td
                style={
                  Object {
                    "minWidth": 244,
                    "overflow": "visible",
                  }
                }
              >
                <div
                  aria-label="Progress Bar"
                  className="emotion-37"
                  onKeyPress={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="emotion-38"
                  >
                    <div
                      className="emotion-39"
                    />
                  </div>
                </div>
              </td>
              <td>
                <div
                  className="emotion-43"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="actions emotion-44"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
            <tr
              className="emotion-30"
              onClick={[Function]}
            >
              <td>
                <div
                  className="emotion-95"
                >
                  Paused
                </div>
              </td>
              <td>
                <a
                  className="emotion-32"
                  href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  test_officer
                </a>
              </td>
              <td
                className="emotion-33"
              >
                100
              </td>
              <td>
                2019-10-11 21:03:27
              </td>
              <td
                className="emotion-33"
              >
                4
              </td>
              <td>
                <div
                  className="emotion-35"
                >
                  <a
                    className="emotion-36"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/errors"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    <svg
                      color="#c92300"
                      data-file-name="warning.svg"
                      height={20}
                    />
                  </a>
                </div>
              </td>
              <td
                style={
                  Object {
                    "minWidth": 244,
                    "overflow": "visible",
                  }
                }
              >
                <div
                  aria-label="Progress Bar"
                  className="emotion-37"
                  onKeyPress={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="emotion-38"
                  >
                    <div
                      className="emotion-39"
                    />
                  </div>
                </div>
              </td>
              <td>
                <div
                  className="emotion-43"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="actions emotion-44"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
            <tr
              className="emotion-30"
              onClick={[Function]}
            >
              <td>
                <div
                  className="emotion-61"
                >
                  Success
                </div>
              </td>
              <td>
                <a
                  className="emotion-32"
                  href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/1585ca03-4db0-14d1-8edd-0a580a000926"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  flipbook_export_1
                </a>
              </td>
              <td
                className="emotion-33"
              >
                1
              </td>
              <td>
                2019-08-01 22:52:19
              </td>
              <td
                className="emotion-33"
              >
                4
              </td>
              <td />
              <td
                style={
                  Object {
                    "minWidth": 244,
                    "overflow": "visible",
                  }
                }
              >
                <div
                  aria-label="Progress Bar"
                  className="emotion-37"
                  onKeyPress={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="emotion-38"
                  >
                    <div
                      className="emotion-113"
                    />
                  </div>
                </div>
              </td>
              <td />
            </tr>
            <tr
              className="emotion-30"
              onClick={[Function]}
            >
              <td>
                <div
                  className="emotion-61"
                >
                  Success
                </div>
              </td>
              <td>
                <a
                  className="emotion-32"
                  href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/be47702d-cbd6-1cce-a096-0a580a000920"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  export_7_8_2019
                </a>
              </td>
              <td
                className="emotion-33"
              >
                1
              </td>
              <td>
                2019-07-08 18:53:44
              </td>
              <td
                className="emotion-33"
              >
                4
              </td>
              <td />
              <td
                style={
                  Object {
                    "minWidth": 244,
                    "overflow": "visible",
                  }
                }
              >
                <div
                  aria-label="Progress Bar"
                  className="emotion-37"
                  onKeyPress={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="emotion-38"
                  >
                    <div
                      className="emotion-39"
                    />
                  </div>
                </div>
              </td>
              <td />
            </tr>
            <tr
              className="emotion-30"
              onClick={[Function]}
            >
              <td>
                <div
                  className="emotion-61"
                >
                  Success
                </div>
              </td>
              <td>
                <a
                  className="emotion-32"
                  href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/be47702c-cbd6-1cce-a096-0a580a000920"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  export_7_8_2019___
                </a>
              </td>
              <td
                className="emotion-33"
              >
                1
              </td>
              <td>
                2019-07-08 18:43:03
              </td>
              <td
                className="emotion-33"
              >
                4
              </td>
              <td />
              <td
                style={
                  Object {
                    "minWidth": 244,
                    "overflow": "visible",
                  }
                }
              >
                <div
                  aria-label="Progress Bar"
                  className="emotion-37"
                  onKeyPress={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="emotion-38"
                  >
                    <div
                      className="emotion-39"
                    />
                  </div>
                </div>
              </td>
              <td />
            </tr>
            <tr
              className="emotion-30"
              onClick={[Function]}
            >
              <td>
                <div
                  className="emotion-61"
                >
                  Success
                </div>
              </td>
              <td>
                <a
                  className="emotion-32"
                  href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/acd91540-08c1-199f-b899-0a580a00091e"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  sdlc-testdata-import.json
                </a>
              </td>
              <td
                className="emotion-33"
              >
                100
              </td>
              <td>
                2019-07-03 16:49:15
              </td>
              <td
                className="emotion-33"
              >
                4
              </td>
              <td />
              <td
                style={
                  Object {
                    "minWidth": 244,
                    "overflow": "visible",
                  }
                }
              >
                <div
                  aria-label="Progress Bar"
                  className="emotion-37"
                  onKeyPress={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="emotion-38"
                  >
                    <div
                      className="emotion-39"
                    />
                  </div>
                </div>
              </td>
              <td />
            </tr>
            <tr
              className="emotion-30"
              onClick={[Function]}
            >
              <td>
                <div
                  className="emotion-61"
                >
                  Success
                </div>
              </td>
              <td>
                <a
                  className="emotion-32"
                  href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/acd9153f-08c1-199f-b899-0a580a00091e"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  sdlc-testdata-import.json
                </a>
              </td>
              <td
                className="emotion-33"
              >
                100
              </td>
              <td>
                2019-07-03 01:29:41
              </td>
              <td
                className="emotion-33"
              >
                4
              </td>
              <td>
                <div
                  className="emotion-35"
                >
                  <a
                    className="emotion-36"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/acd9153f-08c1-199f-b899-0a580a00091e/errors"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    <svg
                      color="#c92300"
                      data-file-name="warning.svg"
                      height={20}
                    />
                  </a>
                </div>
              </td>
              <td
                style={
                  Object {
                    "minWidth": 244,
                    "overflow": "visible",
                  }
                }
              >
                <div
                  aria-label="Progress Bar"
                  className="emotion-37"
                  onKeyPress={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="emotion-38"
                  >
                    <div
                      className="emotion-39"
                    />
                    <div
                      className="emotion-113"
                    />
                  </div>
                </div>
              </td>
              <td />
            </tr>
          </tbody>
        </table>
      </div>
      <div>
         
      </div>
      <Pagination
        currentPage={1}
        totalPages={1}
      />
      <div>
         
      </div>
    </div>
  </div>,
]
`;

exports[`<Jobs /> should render properly with no jobs 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<h2
    className="emotion-0"
  >
    Job Queue
  </h2>,
  .emotion-0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-3,
.emotion-3:hover,
.emotion-3:visited,
.emotion-3 .noop {
  background-color: #3A5DFF;
}

.emotion-3:hover,
.emotion-3 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-3[aria-disabled=true],
.emotion-3 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  padding-left: 4px;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-8 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.emotion-9 {
  height: 100%;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  white-space: nowrap;
}

.emotion-9 tr {
  background-color: #252525;
}

.emotion-9 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-9 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-9 tr:hover .actions {
  color: #b3b3b3;
}

.emotion-9 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-9 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-9 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-9 td {
  max-width: calc(100vw / 7);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-9 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-9 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-10 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: auto;
}

.emotion-10:nth-of-type(2) {
  width: 100%;
}

.emotion-10:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: transparent;
  border: none;
  font-size: inherit;
  font-weight: inherit;
  color: inherit;
  cursor: pointer;
  width: 100%;
  padding: 12px 16px;
}

.emotion-11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-11:hover svg {
  color: #ffffff;
  -webkit-transform: rotate(-180deg);
  -moz-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-12 {
  color: transparent;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: transparent;
  border: none;
  font-size: inherit;
  font-weight: inherit;
  color: inherit;
  cursor: pointer;
  width: 100%;
  padding: 12px 16px;
}

.emotion-20:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-20:hover svg {
  color: #ffffff;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-21 {
  color: #6088FE;
  -webkit-transform: rotate(-180deg);
  -moz-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-23 {
  padding: 12px 16px;
}

.emotion-28 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: 1px;
}

.emotion-28:nth-of-type(2) {
  width: 100%;
}

.emotion-28:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 12px 16px;
}

.emotion-30 {
  height: 100%;
  pointer-events: none;
}

.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 15px;
  line-height: 19px;
}

.emotion-32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 18px;
  line-height: 21px;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <h3
        className="emotion-2"
      >
        Number of 
        Jobs
        : 
        0
      </h3>
      <button
        className="emotion-3"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-4"
        >
          <svg
            className="emotion-5"
            color="#ffffff"
            data-file-name="refresh.svg"
            height={20}
          />
          <div
            className="emotion-6"
          >
            Refresh 
            Jobs
          </div>
        </div>
      </button>
    </div>
    <div
      className="emotion-7"
    >
      <div
        className="emotion-8"
      >
        <table
          className="emotion-9"
        >
          <thead>
            <tr>
              <th
                className="emotion-10"
              >
                <a
                  className="emotion-11"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  Status
                  <svg
                    className="emotion-12"
                    data-file-name="sort.svg"
                    height={18}
                  />
                </a>
              </th>
              <th
                className="emotion-10"
              >
                <a
                  className="emotion-11"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  Job Name
                  <svg
                    className="emotion-12"
                    data-file-name="sort.svg"
                    height={18}
                  />
                </a>
              </th>
              <th
                className="emotion-10"
              >
                <a
                  className="emotion-11"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  Priority
                  <svg
                    className="emotion-12"
                    data-file-name="sort.svg"
                    height={18}
                  />
                </a>
              </th>
              <th
                className="emotion-10"
              >
                <a
                  className="emotion-20"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  Created
                  <svg
                    className="emotion-21"
                    data-file-name="sort.svg"
                    height={18}
                  />
                </a>
              </th>
              <th
                className="emotion-10"
              >
                <div
                  className="emotion-23"
                >
                  # Assets
                </div>
              </th>
              <th
                className="emotion-10"
              >
                <div
                  className="emotion-23"
                >
                  Errors
                </div>
              </th>
              <th
                className="emotion-10"
              >
                <div
                  className="emotion-23"
                >
                  Task Progress
                </div>
              </th>
              <th
                className="emotion-28"
              >
                <div
                  className="emotion-29"
                >
                  <svg
                    data-file-name="kebab.svg"
                    height={20}
                  />
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="emotion-30"
            >
              <td
                colSpan={8}
              >
                <div
                  className="emotion-31"
                >
                  <div
                    className="emotion-32"
                  >
                    <svg
                      data-file-name="noJobs.svg"
                      width={200}
                    />
                    <div>
                      There are currently no jobs in the queue.
                    </div>
                    <div>
                      Any new job will appear here.
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
]
`;
